Fix carousel link color contrast
WCAG2AAA. Still might need some tweaking.

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -6,7 +6,7 @@
 }
 
 .caro a {
-    color: #005c8b;
+    color: #003e5e;
 }
 
 .caro .prev {
